--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ footer {
 #main-content {
 	display: none;
 }
-
+/*Daryl */
 @media only screen and (min-width:360px) {
 
 
@@ -200,6 +200,106 @@ footer {
 		left: 0;
 		width: 100vw;
 		z-index: 100;
-
 	}
+	p {
+		font-size: 2vw;
+	}
+	.font-circular {
+		font-family: "Circular Std Book", serif;
+	}
+	#color-1 {
+		background-color: #00657c;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 25vh;
+		height: 25vh;
+	}
+	
+	#color-2 {
+		background-color: #ede5bb;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 25vh;
+		height: 25vh;
+	}
+	
+	#color-3 {
+		background-color: #bad3ee;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 25vh;
+		height: 25vh;
+	}
+	
+	#color-4 {
+		background-color: #95261f;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 25vh;
+		height: 25vh;
+	}
+	Thu Tran
+/*drop down menu*/
+.dropbtn{
+    color: #00657C;
+    cursor: pointer;
+    font-family: Circular Std;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: normal;
+    padding: 10px;
+    translate: 80px -16px;
+}
+.dropbtn:hover{
+    border-bottom: solid #BAD3EE 6px;
+}
+.dropdown{
+    position: relative;
+    padding-left: 200px;
+}
+  
+.dropdown-content{
+    display: none;
+    border-radius: 10px 10px 10px 10px;
+    font-family: Circular Std;
+}
+.dropdown-content a{
+    color: #EDE5BB;
+    text-decoration: none;
+    display: block;
+    font-size: medium;
+}
+  
+.dropdown-content a:hover{
+    background-color: #EDE5BB;
+    color: #95261F;
+    margin: 4px;
+    top: 4px;
+    bottom: 4px;
+    left: 2px;
+    right: 2px;
+    border-radius: 10px 10px 10px 10px;
+}
+  
+.dropdown:hover .dropdown-content{
+    display: block;
+    background-color: #95261F;
+    overflow: hidden;
+    box-shadow: 0px 2px 18px 0px rgba(51, 51, 51, 0.1);
+    border-radius: 10px 10px 10px 10px;
+    translate: 80px -5px;
+}
+.dropdown:hover .dropbtn{
+    width: 80px;
+    height: 25px;
+}
+/*End Daryl*/
 }
