--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 	--blue-color: #00567c;
 	--yellow-color: #ede5bb;
 	--red-color: #95261f;
+	--font-circular: "Circular Std Book", serif;
+	--font-caveat: "Caveat", cursive;
 }
 
 body {
@@ -53,12 +55,13 @@ body {
 }
 
 .font-circular {
-	font-family: "Circular Std Book", serif;
+	font-family: var(--font-circular);
 }
 
-.font-circular-bold{
-	font-family: "Circular Std Bold", serif;
-	font-size:xx-large;
+.font-circular-bold {
+	font-family: var(--font-circular);
+	font-weight: bold;
+	font-size: 2vw;
 }
 
 .pl-6 {
@@ -114,7 +117,7 @@ footer {
 
 .main-grid h1 {
 	font-size: 7vw;
-	font-family: "Caveat", cursive;
+	font-family: var(--font-caveat);
 	color: var(--red-color);
 	text-align: center;
 }
@@ -206,7 +209,7 @@ footer {
 		font-size: 1rem;
 	}
 	.font-circular {
-		font-family: "Circular Std Book", serif;
+		font-family: var(--font-circular);
 	}
 	.header-text{
 		font-size: 1rem;
@@ -250,81 +253,5 @@ footer {
 		width: 25vh;
 		height: 25vh;
 	}
-
-/*drop down menu (Tapiwa)*/
-.dropbtn{
-    color: #00657C;
-    cursor: pointer;
-    font-family: Circular Std;
-    font-size: 32px;
-    font-weight: 500;
-    line-height: normal;
-    padding: 10px;
-    translate: 80px -16px;
-}
-.dropbtn:hover{
-    border-bottom: solid #BAD3EE 6px;
-}
-  
-.dropdown-content{
-    display: none;
-    border-radius: 10px 10px 10px 10px;
-    font-family: Circular Std;
-}
-.dropdown-content a{
-    color: #EDE5BB;
-    text-decoration: none;
-    display: block;
-    font-size: medium;
-}
-  
-.dropdown-content a:hover{
-    background-color: #EDE5BB;
-    color: #95261F;
-    margin: 4px;
-    top: 4px;
-    bottom: 4px;
-    left: 2px;
-    right: 2px;
-    border-radius: 10px 10px 10px 10px;
-}
-  
-.dropdown:hover .dropdown-content{
-    display: block;
-    background-color: #95261F;
-    overflow: hidden;
-    box-shadow: 0px 2px 18px 0px rgba(51, 51, 51, 0.1);
-    border-radius: 10px 10px 10px 10px;
-    translate: 80px -5px;
-}
-.dropdown:hover .dropbtn{
-    width: 80px;
-    height: 25px;
-}
-
-.location-dropdown {
-	text-decoration: none;
-    display: none;
-    position: absolute; 
-    top: 48%; 
-    left: 75%; 
-    width: 200px;
-}
-
-.location-dropdown li {
-    padding: 10px;
-    text-align: center;
-	list-style-type: none;
-}
-
-.location-dropdown a {
-    text-decoration: none;
-    color: #333;
-}
-
-.header-text.dropdown:hover + .location-dropdown {
-    display: block;
-}
-/* end Tapiwa */
 /*End Daryl*/
 }
