--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
 }
 
 p {
-	font-size: 2vw;
+	font-size: larger;
 }
 
 footer {
@@ -220,6 +220,46 @@ footer {
 #main-content {
 	display: none;
 }
+
+/*Ana -About us- */
+#about-us2{
+	display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(3, 1fr);
+place-items: center;
+place-content: center;
+width: 65vw;
+margin: 0 auto;
+
+}
+#about-us-font{
+	background-color: #00657C;
+	text-align: center;
+	border-radius: 10% 10% 10% 10%;
+	padding: 5%;
+	
+	grid-area: 2 / 1 / 2 / 4;
+}
+#img{
+	border-radius: 10% 10% 10% 10%;
+	grid-area: 1 / 3 / 4 / 6;
+}
+#about_us_img{
+	width: 41.6875rem;
+height: 57.4375rem;
+border-radius: 10% 10% 10% 10%;
+}
+#about-us-font p{
+	color: #EDE5BB;
+	font-family: "Circular Std Book", serif;
+	font-size: large;
+}
+#about-us-font p2{
+	font-size: 4rem;
+	color: #EDE5BB;
+	font-family: "Circular Std Book", serif;
+}
+
 /*Daryl */
 @media only screen and (min-width:360px) {
 
