Put css. Set global code to no design

--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,11 @@ footer {
 }
 /*Daryl */
 @media only screen and (min-width:360px) {
+	*{
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
 
 
 	.bg-yellow {
