--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ border-radius: 10% 10% 10% 10%;
 }
 
 /*Daryl */
-@media only screen and (min-width:360px) {
+@media only screen and (max-width:360px) {
 	*{
 		margin: 0;
 		padding: 0;
