--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 	--blue-color: #00567c;
 	--yellow-color: #ede5bb;
 	--red-color: #95261f;
+	--light-blue-color: #bad3ee;
 	--font-circular: "Circular Std Book", serif;
 	--font-caveat: "Caveat", cursive;
 }
@@ -66,7 +67,7 @@ body {
 }
 
 .dropbtn-menu {
-	background-color: #ede5bb;
+	background-color: var(--yellow-color);
 	border: none;
 	margin-left: 3.7vw;
 }
@@ -215,7 +216,7 @@ footer {
 }
 
 #color-1 {
-	background-color: #00657c;
+	background-color: var(--blue-color);
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -225,7 +226,7 @@ footer {
 }
 
 #color-2 {
-	background-color: #ede5bb;
+	background-color: var(--yellow-color);
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -235,7 +236,7 @@ footer {
 }
 
 #color-3 {
-	background-color: #bad3ee;
+	background-color: var(--light-blue-color);
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -245,7 +246,7 @@ footer {
 }
 
 #color-4 {
-	background-color: #95261f;
+	background-color: var(--red-color);
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -278,7 +279,7 @@ footer {
 	margin-left: 30vw;
 }
 #about-us-font {
-	background-color: #00657C;
+	background-color: var(--blue-color);
 	text-align: center;
 	border-radius: 10%;
 	padding: 5%;
@@ -294,13 +295,13 @@ footer {
 	border-radius: 10% 10% 10% 10%;
 }
 #about-us-font p {
-	color: #EDE5BB;
+	color: var(--yellow-color);
 	font-family: var(--font-circular);
 	font-size: large;
 }
 #about-us-font p2{
 	font-size: 4rem;
-	color: #EDE5BB;
+	color: var(--yellow-color);
 	font-family: var(--font-circular);
 }
 
@@ -404,172 +405,172 @@ footer {
 /*End Daryl*/
 }
 /*Tran Thu*/
-.background-for-menu{
+.background-for-menu {
 	display: grid;
 }
-#red-bg h1{
+#red-bg h1 {
 	font-family: Caveat;
-	color: #ede5bb;
-	font-size: 85px;
+	color: var(--yellow-color);
+	font-size: 5vw;
 	grid-column-start: 2;
 	grid-row-start: 2;
 }
-#red-bg p{
-	color: #ede5bb;
+#red-bg p {
+	color: var(--yellow-color);
 	font-size: 1.5vw;
-	grid-column: 2/9;
+	grid-column: 2 / 9;
 	font-family: var(--font-circular);
 	grid-row-start: 3;
 	text-align: justify;
 }
-/* #red-bg img{
+/* #red-bg img {
 	grid-column: 10/12;
 	grid-row: 2/3;
 } */
-#red-bg{
-	background-color: #95261f;
+#red-bg {
+	background-color: var(--red-color);
 	display: grid;
 	grid-template-rows: repeat(4,1fr);
 	max-height: 21vw;
 }
-.article{
+.article {
 	display: grid;
 	grid-template-columns: repeat(18,1fr);
 }
-.article h2{
-	color: #95261f;
+.article h2 {
+	color: var(--red-color);
 	font-family: var(--font-caveat);
-	font-size: 48px;
+	font-size: 3vw;
 	grid-column-start: 10;
 	margin-top: 2em;
 }
-#title-of-each-catagory{
-	color: #274C5B;
+#title-of-each-catagory {
+	color: var(--blue-color);
 	font-family: var(--font-circular);
-	font-size: 64px;
-	grid-column: 6/ span 9;
+	font-size: 4vw;
+	grid-column: 6 / span 9;
 }
-section{
+section {
 	display: inline-flex;
 	flex-direction: column;
 	font-family: var(--font-circular);
-	color: #95261f;
+	color: var(--red-color);
 }
-#Cappuccino{
-	grid-column: 6/span 5;
+#cappuccino {
+	grid-column: 6 / span 5;
 }
-section p{
-	font-size: 30px;
+section p {
+	font-size: 1.8vw;
 }
-section small{
-	font-size: 20px;
+section small {
+	font-size: 1.4vw;
 }
-#price-for-coffee{
+#price-for-coffee {
 	grid-column-start: 13;
 	text-align: right;
 }
-#light-blue-bg{
+#light-blue-bg {
 	background-color: #bad3ee;
 	display: grid;
 	grid-template-rows: repeat(4,1fr);
 	margin-top: 6em;
 }
-#light-blue-bg h1{
+#light-blue-bg h1 {
 	font-family: Caveat;
 	color: #274C5B;
-	font-size: 85px;
+	font-size: 5vw;
 	grid-column-start: 16;
 	grid-row-start: 2;
 }
-#light-blue-bg p{
+#light-blue-bg p {
 	color: #274C5B;
 	font-size: 24px;
-	grid-column: 9/18;
+	grid-column: 9 / 18;
 	font-family: var(--font-circular);
 	grid-row-start: 3;
 	text-align: justify;
 }
-#Natural{
-	grid-column: 6/span 5;
+#natural {
+	grid-column: 6 / span 5;
 }
-#price-for-croissant{
+#price-for-croissant {
 	grid-column-start: 14;
 	text-align: right;
 }
-#title-of-croissant{
+#title-of-croissant {
 	color: #274C5B;
 	font-family: var(--font-circular);
-	font-size: 64px;
-	grid-column: 6/ span 15;
+	font-size: 4vw;
+	grid-column: 6 / span 15;
 }
-#yellow-bg{
+#yellow-bg {
 	background-color: #ede5bb;
 	display: grid;
 	grid-template-rows: repeat(4,1fr);
 	margin-top: 6em;
 }
-#yellow-bg h1{
+#yellow-bg h1 {
 	font-family: Caveat;
 	color: #95261f;
-	font-size: 85px;
+	font-size: 5vw;
 	grid-column-start: 2;
 	grid-row-start: 2;
 }
-#yellow-bg p{
+#yellow-bg p {
 	color: #95261f;
-	font-size: 24px;
-	grid-column: 2/9;
+	font-size: 2vw;
+	grid-column: 2 / 9;
 	font-family: var(--font-circular);
 	grid-row-start: 3;
 	text-align: justify;
 }
-#title-of-sweet{
+#title-of-sweet {
 	color: #274C5B;
 	font-family: var(--font-circular);
-	font-size: 64px;
-	grid-column: 9/12;
+	font-size: 4vw;
+	grid-column: 9 / 12;
 }
-#Macaron{
-	grid-column: 6/span 5;
+#macaron {
+	grid-column: 6 / span 5;
 }
-#price-for-sweet{
+#price-for-sweet {
 	grid-column-start: 13;
 	text-align: right;
 }
-#sub-price-for-sweet{
+#sub-price-for-sweet {
 	margin-top: 10.5em;
 }
-#blue-bg{
+#blue-bg {
 	background-color: #274C5B;
 	display: grid;
 	grid-template-rows: repeat(4,1fr);
 	margin-top: 6em;
 }
-#blue-bg h1{
+#blue-bg h1 {
 	font-family: Caveat;
 	color: #ede5bb;
-	font-size: 85px;
+	font-size: 5vw;
 	grid-column-start: 16;
 	grid-row-start: 2;
 }
-#blue-bg p{
+#blue-bg p {
 	color: #ede5bb;
-	font-size: 24px;
-	grid-column: 9/18;
+	font-size: 2vw;
+	grid-column: 9 / 18;
 	font-family: var(--font-circular);
 	grid-row-start: 3;
 	text-align: justify;
 }
-#title-of-tea{
+#title-of-tea {
 	color: #274C5B;
 	font-family: var(--font-circular);
-	font-size: 64px;
-	grid-column: 10/12;
+	font-size: 4vw;
+	grid-column: 10 / 12;
 }
-#tea{
-	grid-column: 6/span 5;
+#tea {
+	grid-column: 6 / span 5;
 }
-#price-for-tea{
+#price-for-tea {
 	grid-column-start: 14;
 	text-align: right;
 }
