--- a/css/style.css
+++ b/css/style.css
@@ -408,29 +408,70 @@ footer {
 	font-family: Caveat;
 	color: #ede5bb;
 	font-size: 85px;
+	/* grid-column-start: 2;
+	grid-row-start: 1; */
 	grid-column-start: 2;
-	grid-row-start: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 #red-bg p{
 	color: #ede5bb;
 	font-size: 24px;
-	grid-column: 2/9;
+	grid-column: 2/15;
 	font-family: var(--font-circular);
 	grid-row-start: 3;
 	text-align: justify;
 }
 #red-bg img{
-	grid-column: 10/12;
-	grid-row: 2/3;
+	/* grid-row: 2/4;
+	grid-column-start: 18; */
+	position: relative;
+    grid-row: 1/ span 3;
+    grid-column-start: 17;
+    overflow: none;
+    display: block;
+}
+#light-blue-bg img{
+	/* grid-row: 2/4;
+	grid-column-start: 18; */
+	position: relative;
+    grid-row: 1/ 8;
+    grid-column-start: 1;
+    overflow: none;
+    display: block;
+}
+#yellow-bg img{
+	/* grid-row: 2/4;
+	grid-column-start: 18; */
+	position: relative;
+    grid-row: 1/ span 3;
+    grid-column-start: 18;
+    overflow: none;
+    display: block;
+	z-index: 0;
+	float: right;
+}
+#blue-bg img{
+	/* grid-row: 2/4;
+	grid-column-start: 18; */
+	position: relative;
+    grid-row: 1/ 8;
+    grid-column-start: 1;
+    overflow: none;
+    display: block;
 }
 #red-bg{
 	background-color: #95261f;
 	display: grid;
-	grid-template-rows: repeat(4,1fr);
+	/* grid-template-rows: repeat(4,1fr); */
+	grid-template-rows: repeat(3,1fr);
 }
 .article{
 	display: grid;
 	grid-template-columns: repeat(18,1fr);
+}
+.article h1{
+	z-index: 10;
 }
 .article h2{
 	color: #95261f;
@@ -438,6 +479,14 @@ footer {
 	font-size: 48px;
 	grid-column-start: 10;
 	margin-top: 2em;
+}
+.article img{
+	grid-column: 1/18;
+	z-index: 1;
+	position: absolute;
+}
+.article p{
+	z-index: 10;
 }
 #title-of-each-catagory{
 	color: #274C5B;
@@ -453,22 +502,26 @@ section{
 }
 #Cappuccino{
 	grid-column: 6/span 5;
+	z-index: 10;
 }
 section p{
 	font-size: 30px;
 }
 section small{
 	font-size: 20px;
+	z-index: 10;
 }
 #price-for-coffee{
 	grid-column-start: 13;
 	text-align: right;
+	z-index: 10;
 }
 #light-blue-bg{
 	background-color: #bad3ee;
 	display: grid;
 	grid-template-rows: repeat(4,1fr);
-	margin-top: 6em;
+	margin-top: 7em;
+	z-index: 10;
 }
 #light-blue-bg h1{
 	font-family: Caveat;
@@ -514,10 +567,11 @@ section small{
 #yellow-bg p{
 	color: #95261f;
 	font-size: 24px;
-	grid-column: 2/9;
+	grid-column: 2/14;
 	font-family: var(--font-circular);
 	grid-row-start: 3;
 	text-align: justify;
+	z-index: 2;
 }
 #title-of-sweet{
 	color: #274C5B;
@@ -540,6 +594,7 @@ section small{
 	display: grid;
 	grid-template-rows: repeat(4,1fr);
 	margin-top: 6em;
+	z-index: 10;
 }
 #blue-bg h1{
 	font-family: Caveat;
@@ -551,7 +606,7 @@ section small{
 #blue-bg p{
 	color: #ede5bb;
 	font-size: 24px;
-	grid-column: 9/18;
+	grid-column: 10/18;
 	font-family: var(--font-circular);
 	grid-row-start: 3;
 	text-align: justify;
