--- a/css/style.css
+++ b/css/style.css
@@ -217,12 +217,13 @@ footer {
 
 .main-grid-image {
 	object-fit: contain;
-	max-height: 100%;
-	max-width: 20vw;
+	max-height: 200%;
+	max-width: 30vw;
 }
 
 .main-image {
 	grid-row: span 2;
+	image-rendering: optimizeQuality;
 }
 
 .main-subgrid p {
@@ -285,7 +286,177 @@ footer {
 	display: none;
 }
 
-/*Ana -About us- */
+/*Ana -Products- */
+
+#products_section{
+	display:flex;
+	justify-content: center;
+	align-content: center;
+	flex-flow: column wrap;
+	padding-bottom: 5vw;
+	width: 100%;
+	gap: 0.5vw;
+}
+
+#categories{
+	text-align: center;
+	font-size: 3vw;
+	font-family: var(--font-caveat);
+	color: var(--red-color);
+}
+#red_coffee{
+	inset-inline-end: auto;
+	width: 6vw;
+	height: 6vw;
+	object-fit: contain;
+}
+
+#products_header{
+	text-align: center;
+	inset-inline-start: auto;
+ 	font-size: 5vw;
+ 	font-family: var(--font-circular);
+ 	color: var(--blue-color);
+}
+
+#product_row1{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	gap: 0.9vw;
+	padding-bottom: 1.5vw;
+}
+
+#product_row2{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	gap: 0.9vw;
+}
+#product_highlight{
+	display:flex;
+	background-color: var(--blue-color);
+	justify-content: center;
+	align-content: center;
+	flex-flow: column wrap;
+	padding-bottom: 5vw;
+	gap: 0.5vw;
+	width: 100%;
+}
+
+#hl_header{
+		position: absolute;
+}
+
+#hl_Offer{
+}
+
+#hl_sign{
+}
+
+.bg-patterns{
+	position: relative;
+	object-fit: contain;
+}
+#product_row3{
+	position: absolute;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	gap: 0.9vw;
+	padding-bottom: 1.5vw;
+	padding-left: 11.7%;
+}
+
+.product{
+	padding: 1vw;
+	flex-flow: column nowrap;
+	border-radius: 15px;
+	background-color: white;
+}
+
+.tag{
+	color: var(--yellow-color);
+	background-color: var(--blue-color);
+	border-radius: 5px;
+	width: max-content;
+	padding-left: 0.5vw;
+	padding-right: 0.5vw;
+	padding-top: 0.2vw;
+	padding-bottom: 0.2vw;
+	font-size: max-content 1vw;
+	font-family: var(--font-circular);
+}
+
+.product_img{
+	image-rendering: auto;
+}
+
+.croissant1{
+	image-rendering: auto;
+	padding-top: 2.83vw;
+	padding-bottom: 3vw;
+}
+.croissant2{
+	image-rendering: auto;
+	padding-top: 4.2vw;
+	padding-bottom: 3vw;
+}
+
+.macaron1{
+	padding-left: 1.2vw;
+	padding-right: 1.2vw;
+	padding-top: 5.3vw;
+	padding-bottom: 5vw;
+	image-rendering: auto;
+}
+.macaron2{
+	padding-left: 1.2vw;
+	padding-right: 1.2vw;
+	padding-top: 5vw;
+	padding-bottom: 3.4vw;
+	image-rendering: auto;
+}
+
+.americano{
+	width: 15.2vw;
+	height: 15.2vw;
+	image-rendering: auto;
+}
+
+.product_name{
+	color: var(--blue-color);
+	font-family: var(--font-circular);
+}
+
+.price_raiting{
+	display: flex;
+	justify-content:center;
+	flex-flow: nowrap row;
+	border-top: solid gainsboro;
+}
+
+.old_price{
+	font-size: max-content 1vw;
+	padding-right: 1vw;
+	color: rgb(198, 198, 198);
+	font-family: var(--font-circular);
+}
+
+.new_price{
+	color: var(--blue-color);
+	font-size: max-content 1vw;
+	padding-right: 5vw;
+	font-family: var(--font-circular);
+}
+
+.raiting{
+	font-family: var(--font-circular);
+	font-size: max-content 1vw;
+	color: rgb(250, 180, 16);
+}
+
+/*-About us-*/
 #about-us2 {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
@@ -293,34 +464,36 @@ footer {
 	place-items: center;
 	place-content: center;
 	width: 60vw;
-	margin-left: 30vw;
+	margin-left: 20vw;
 }
 #about-us-font {
 	background-color: var(--blue-color);
 	text-align: center;
-	border-radius: 10%;
+	border-radius: 15px;
 	padding: 5%;
 	grid-area: 2 / 1 / 2 / 4;
 }
 #img{
-	border-radius: 10%;
+	border-radius: 15px;
 	grid-area: 1 / 3 / 4 / 6;
 }
 #about_us_img{
 	width: 30vw;
 	height: 37vw;
-	border-radius: 10%;
+	border-radius: 15px;
 }
 #about-us-font p {
 	color: var(--yellow-color);
 	font-family: var(--font-circular);
-	font-size: 1vw;
+	font-size: 1.5vw;
 }
 #about-us-font h2{
 	font-size: 3vw;
 	color: var(--yellow-color);
 	font-family: var(--font-circular);
 }
+
+/*Ana -end of part- */
 
 #tea {
 	margin-bottom: 22vw;
@@ -438,18 +611,18 @@ footer {
 	#about-us-font {
 		background-color: var(--blue-color);
 		text-align: center;
-		border-radius: 10%;
+		border-radius: 15px;
 		padding: 5%;
 		grid-area: 2 / 1 / 2 / 4;
 	}
 	#img{
-		border-radius: 10%;
+		border-radius: 15px;
 		grid-area: 1 / 3 / 4 / 6;
 	}
 	#about_us_img{
 		width: 80vw;
 		height: 120vw;
-		border-radius: 10%;
+		border-radius: 15px;
 	}
 	#about-us-font p {
 		color: var(--yellow-color);
