--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,8 @@ object-fit: fill;
 		width: 25vh;
 		height: 25vh;
 	}
-
+/*End Daryl*/
+}
 /*Tran Thu*/
 
 @media only screen and (max-width: 500px) {
@@ -697,11 +698,10 @@ object-fit: fill;
 }
 
 .menu-coffee-header {
-	display: grid;
-	grid-template-columns: repeat(5,1fr);
-	width: 100%;
+	display: flex;
+	flex-direction: column;
 	background-color: var(--red-color);
-	margin-top: 110vh;
+	padding: 2vw 60vw 2vw 3vw;
 }
 
 .menu-coffee-header h2 {
@@ -735,20 +735,6 @@ object-fit: fill;
 }
 
 .menu-pain-header {
-	display: grid;
-	grid-template-columns: repeat(5,1fr);
-	grid-template-rows: 1fr;
-	width: 100%;
-	background-color: var(--light-blue-color);
-}
-
-.menu-pain-header img{
-	width: 30vw;
-	grid-column-start: 1;
-	grid-row-start: 1;
-}
-
-.header-pain {
 	display: flex;
 	flex-direction: column;
 	grid-column: 3/ span 2;
@@ -770,17 +756,16 @@ object-fit: fill;
 }
 
 .menu-sweets-header {
-	display: grid;
-	grid-template-columns: repeat(5,1fr);
-	width: 100%;
+	display: flex;
+	flex-direction: column;
 	background-color: var(--yellow-color);
+	padding: 2vw 60vw 2vw 3vw;
 }
 
 .menu-sweets-header img{
 	width: 30vw;
 	grid-column-start: 5;
 }
-
 .menu-sweets-header h2 {
 	font-size: 6vw;
 	font-family: var(--font-caveat);
@@ -796,11 +781,10 @@ object-fit: fill;
 }
 
 .menu-tea-header {
-	display: grid;
-	grid-template-columns: repeat(5,1fr);
-	grid-template-rows: 1fr;
-	width: 100%;
+	display: flex;
+	flex-direction: column;
 	background-color: var(--blue-color);
+	padding: 2vw 3vw 2vw 60vw;
 }
 
 .menu-tea-header img{
@@ -808,7 +792,6 @@ object-fit: fill;
 	grid-column-start: 1;
 	grid-row-start: 1;
 }
-
 .menu-tea-header h2 {
 	font-size: 6vw;
 	font-family: var(--font-caveat);
