--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,7 @@ object-fit: fill;
     display: flex;
     flex-direction: column;
     grid-column: 3/ span 2;
-    margin: 5vh 0 0 10vw;
+	justify-content: space-evenly;
 }
 
 .menu-pain-header img{
