fixed products rescaling

--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,91 @@ footer {
 	display: none;
 }
 
+/*Anastasiia*/
+.container {
+	display:grid;
+	grid-template-columns: repeat(7, 1fr);
+	grid-template-rows: repeat(5, 1fr);
+}
+.grid-item1{
+	grid-area: 1/1/3/4;
+}
+.grid-item1 img{
+	width:110%;
+	height:100%;
+	margin-left:7%;
+}
+.grid-item2{
+	grid-area: 1/4/3/8;
+}
+.grid-item2 img{
+	width:80%;
+	height:100%;
+	margin-left:15%;
+}
+ .grid-item3{
+	grid-area: 4/1/6/4;
+
+}
+.grid-item3 img{
+	width:110%;
+	height:100%;
+	margin-left:7%;
+	margin-top: -18%;
+} 
+.grid-item4{
+	grid-area: 4/4/6/8;
+}
+.grid-item4 img{
+	width:80%;
+	height:100%;
+	margin-left:15%;
+	margin-top: -13.3%;
+} 
+@media only screen and (max-width:360px){
+	.container {
+		display:grid;
+		grid-template-columns: repeat(7, 1fr);
+		grid-template-rows: repeat(10, 1fr);
+	}
+	.grid-item1{
+		grid-area: 1/2/4/6;
+	}
+	.grid-item1 img{
+		width:110%;
+		height:100%;
+		margin-left:7%;
+	}
+	.grid-item2{
+		grid-area: 5/2/8/6;
+	}
+	.grid-item2 img{
+		width:112%;
+		height:100%;
+		margin-left: 5%;
+		margin-top: -15%;
+	} 
+	.grid-item3{
+		grid-area: 8/2/11/6;
+	
+	}
+	.grid-item3 img{
+		width:110%;
+		height:100%;
+		margin-bottom: -55%;
+	} 
+	.grid-item4{
+		grid-area: 9/2/11/6;
+	}
+	.grid-item4 img{
+		width:112%;
+		height:155%;
+		margin-left:6%;
+		margin-bottom: -113%;
+	} 
+} 
+/*Anastasiia end*/
+
 /*Ana -About us- */
 #about-us2 {
 	display: grid;
